[build-system]
requires = [
    "setuptools>=54",
    "wheel"    
]
build-backend = "setuptools.build_meta"
[project]
name = "biaswrappers"
authors = [
    {name = "Karthik Singaravadivelan", email = "karthiksing05@gmail.com"},
]
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.5.1.1"
description = "A set of Regression Wrappers that combats bias in data for machine learning models through custom regularization techniques."
readme = "README.md"
dependencies = [
    "scikit-learn>=1.0",
    "numpy>=1.21.6",
]