[metadata]
name = biaswrappers
version = 0.1
author = Karthik Singaravadivelan
author_email = karthiksing05@gmail.com
description = Wrappers that combat bias in data for machine learning models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karthiksing05/biaswrappers
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]