[metadata]
name = biaswrappers
version = 0.4.0
author = Karthik Singaravadivelan
author_email = karthiksing05@gmail.com
description = a set of Regression Wrappers that combats bias in data for machine learning models through regularization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karthiksing05/biaswrappers
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True